# crawler

./: .dockerignore  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  compose.k8s.yml  compose.yml  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
app/: main.py  models.py
app/scrapers/: base.py  geeknews.py  gpters.py  linkedin.py  linkedin_feeds.py  pytorch_kr.py  registry.py
dags/: geeknews_dag.py  linkedin_dag.py  news_collection_dag.py  pytorch_kr_dag.py
dags/utils/: pg_helper.py
docker/: .env.kubernetes  Makefile  README.md  compose.airflow.yml  compose.crawler.yml  compose.k8s.yml  compose.kasm.yml  compose.kind.yml  compose.kubernetes.yml  compose.mongo.yml  compose.proxy.yml  compose.traefik.yml  compose.worker.yml  compose.wsl.yml
docker/airflow/: Dockerfile
docker/app/: Dockerfile
docker/kasm/: Dockerfile  claude.sh  custom_startup.sh  omz.sh
docker/kasm/startup/: docker-setup.sh  fcitx.sh  joplin.sh  omz.sh
docker/kind/: Dockerfile
docker/modules/: airflow.yml  k8s.yml  kasm.yml  traefik.yml  worker.yml  wsl.yml
docker/proxy/: default.conf
docker/services/airflow/: Dockerfile  compose.yml
docker/services/app/: Dockerfile  (+1 more)
docker/traefik/: dynamic_conf.yml
docs/: k8s.md  linkedin_scraper.md  memo.md
scratch/: analyze_structure.py  reprocess_json_ld.py  reprocess_json_ld_master.py  reprocess_json_ld_v2.py  test_parsing.py
scripts/: backfill_geeknews.sh  geeknews_golden_sets.py  gpters_goledn_sets.py  linkedin_feeds.py  pytorch_kr_golden_sets.py  run_crawler.sh
tests/: test_geeknews.py  test_pytorch_kr.py
(+55 files in other folders)
