[project]
name = "crawler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "browserforge>=1.2.4",
    "bs4>=0.0.2",
    "curl-cffi>=0.15.0",
    "linkedin-scraper>=3.1.2",
    "msgspec>=0.21.1",
    "patchright>=1.58.2",
    "playwright>=1.58.0",
    "playwright-stealth>=2.0.3",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.13.1",
    "pymongo>=4.16.0",
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
    "pytest-timeout>=2.4.0",
    "pytest-vcr>=1.0.2",
    "requests>=2.33.1",
    "scrapling>=0.4.6",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
